# MS4525DO

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  readme.md
.github/workflows/: ci.yml
examples/: async_embassy_example.rs  blocking_example.rs  std_mock_example.rs
src/: async_api.rs  blocking.rs  common.rs  error.rs  lib.rs  ms4525do.rs  tasks.rs
