[package]
name = "MS4525DO"
version = "0.1.0"
edition = "2024"
description = "A non-blocking, no-std, no dynamic allocations HAL for the MS4525DO airspeed sensor"

[dependencies]
defmt = "1.0.1"
embassy-time = { version = "0.4.0", features = ["defmt"] }
embedded-hal-async = { version = "1.0.0" }
heapless = { version = "0.8.0   " } # Static allocations
libm = "0.2.15"


# Specify the target for no_std builds
[profile.dev]
opt-level = "s"  # Optimize for size (important for embedded)
debug = true

[profile.release]
opt-level = "s"  # Optimize for size
debug = true

[dev-dependencies]
parameterized = "2.0.0"
