[package]
name = "ms4525do"
version = "0.1.0"
edition = "2021"
authors = ["cojmeister"]
license = "MIT OR Apache-2.0"
description = "Platform-agnostic Rust driver for the MS4525DO airspeed sensor with blocking and async APIs"
repository = "https://github.com/cojmeister/ms4525do"
homepage = "https://github.com/cojmeister/ms4525do"
documentation = "https://docs.rs/ms4525do"
readme = "readme.md"
keywords = ["embedded", "sensor", "airspeed", "ms4525do", "no-std"]
categories = ["embedded", "hardware-support", "no-std", "aerospace"]

[features]
default = ["async"]
std = []
async = ["dep:embassy-time", "dep:embedded-hal-async"]
blocking = ["dep:embedded-hal"]
defmt = ["dep:defmt", "embedded-hal?/defmt-03", "embedded-hal-async?/defmt-03"]
log = ["dep:log"]

[dependencies]
# Core dependencies (always required)
libm = "0.2.15"

# Optional dependencies based on features
embedded-hal = { version = "1.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
embassy-time = { version = "0.4.0", optional = true }

# Optional logging
defmt = { version = "1.0.1", optional = true }
log = { version = "0.4", optional = true }

[dev-dependencies]
# For testing only

[[example]]
name = "std_mock_example"
required-features = ["blocking"]

[[example]]
name = "blocking_example"
required-features = ["blocking"]

[profile.dev]
opt-level = "s"  # Optimize for size (important for embedded)
debug = true

[profile.release]
opt-level = "s"  # Optimize for size
debug = true
lto = true

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
